--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ working - 9
                                 {% assign summary = method[1].summary %}
                                 {% assign tags = method[1].tags %}
 
-                                <li style="font-size: 12px;">{{ summary }} <strong>[{{ verb }}]</strong></li>
+                                <li style="font-size: 12px;">{{ tags }}</li>
 
                               {% endfor %}
 
