--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: page
       }
     }
 </script>
-working - 10
+working - 9
 <table cellpadding="3" cellspacing="2" width="100%" border="1" style="margin-top: 10px;">
   <tr>
     <td align="center" colspan="2"><hr /></td>
@@ -210,14 +210,14 @@ working - 10
                               {% assign method_json = path[1] %}
                               {% for method in method_json %}
                                 {% assign tags = method[1].tags %}
-                                {% if tagList contains tags %}{% else %}
-                                  {% assign tagList = tagList | append:tags %}
+                                {% if tagList contains tags %}
+                                {% else %}
+                                  {% assign tagList = tagList | append: tags %}
                                 {% endif %}
+
                               {% endfor %}
                             {% endfor %}
                           {% endfor %}
-
-                          {{ tagList }}
                         </ul>
                       </td>
                     </tr>
