--- a/index.html
+++ b/index.html
@@ -210,7 +210,12 @@ working - 9
                               {% assign method_json = path[1] %}
                               {% for method in method_json %}
                                 {% assign tags = method[1].tags %}
-                                
+
+                                {% if taglist contains tags %}
+
+                                {% else %}
+                                  
+                                {% endif %}
 
                               {% endfor %}
                             {% endfor %}
