--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: page
       }
     }
 </script>
-working - 9
+working - 10
 <table cellpadding="3" cellspacing="2" width="100%" border="1" style="margin-top: 10px;">
   <tr>
     <td align="center" colspan="2"><hr /></td>
@@ -204,22 +204,28 @@ working - 9
                       <td colspan="2" align="left" style="margin-left: 25px; margin-right: 25px;">
                         <ul>
 
+                          {% assign first = 1 %}
                           {% assign taglist = '' %}
                           {% for spec in openapi_spec_json %}
                             {% for path in spec.paths %}
                               {% assign method_json = path[1] %}
                               {% for method in method_json %}
                                 {% assign tags = method[1].tags %}
-
                                 {% if taglist contains tags %}
-
                                 {% else %}
-                                  
+                                  {% if first == 1 %}
+                                    {% assign taglist = taglist | append:tags %}
+                                  {% else %}
+                                    {% assign taglist = taglist | append:'|' %}
+                                    {% assign taglist = taglist | append:tags %}
+                                  {% endif %}
                                 {% endif %}
 
                               {% endfor %}
                             {% endfor %}
                           {% endfor %}
+
+                          {{ taglist }}
                         </ul>
                       </td>
                     </tr>
