--- a/index.html
+++ b/index.html
@@ -211,7 +211,9 @@ working - 10
                               {% assign method_json = path[1] %}
                               {% for method in method_json %}
                                 {% assign tags = method[1].tags %}
+                                {% if taglist contains tags %}
                                 
+                                {% endif %}
 
                               {% endfor %}
                             {% endfor %}
