--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: page
       }
     }
 </script>
-working - 11
+working - 12
 <table cellpadding="3" cellspacing="2" width="100%" border="1" style="margin-top: 10px;">
   <tr>
     <td align="center" colspan="2"><hr /></td>
@@ -225,7 +225,7 @@ working - 11
                             {% endfor %}
                           {% endfor %}
 
-                          {{ taglist }}
+                          {{ tag.list }}
                         </ul>
                       </td>
                     </tr>
