--- a/index.html
+++ b/index.html
@@ -204,15 +204,16 @@ working - 13
                       <td colspan="2" align="left" style="margin-left: 25px; margin-right: 25px;">
                         <ul>
 
-                          {% assign first = 1 %}
-                          {% assign taglist = '' %}
                           {% for spec in openapi_spec_json %}
                             {% for path in spec.paths %}
                               {% assign method_json = path[1] %}
+                              {% assign taglist = '' %}
                               {% for method in method_json %}
                                 {% assign tags = method[1].tags %}
 
-                              
+                                {% if taglist == 'tags %}
+                                   string includes 'hello'
+                                {% endif %}
 
                                 {% assign taglist = taglist | append:'|' %}
                                 {% assign taglist = taglist | append:tags %}
