--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ working - 13
                               {% for method in method_json %}
                                 {% assign tags = method[1].tags %}
 
-                                {% if taglist == 'tags %}
+                                {% if taglist == tags %}
                                    string includes 'hello'
                                 {% endif %}
 
