--- a/index.html
+++ b/index.html
@@ -211,13 +211,10 @@ working - 13
                               {% for method in method_json %}
                                 {% assign tagarray = method[1].tags %}
                                 {% assign tag = tagarray[0] %}
-                                {% if taglist == tag %}
-                                   string includes 'hello'
+                                {% if taglist contains tag %}
+                                  {% assign taglist = taglist | append:'|' %}
+                                  {% assign taglist = taglist | append:tag %}
                                 {% endif %}
-
-                                {% assign taglist = taglist | append:'|' %}
-                                {% assign taglist = taglist | append:tags %}
-
                               {% endfor %}
                             {% endfor %}
                           {% endfor %}
