--- a/index.html
+++ b/index.html
@@ -213,14 +213,38 @@ working - 13
                                 {% assign tag = tagarray[0] %}
                                 {% if taglist contains tag %}
                                 {% else %}
-                                  {% assign taglist = taglist | append:'|' %}
+                                  {% assign taglist = taglist | append:',' %}
                                   {% assign taglist = taglist | append:tag %}
                                 {% endif %}
                               {% endfor %}
                             {% endfor %}
                           {% endfor %}
 
-                          {{ taglist }}
+                          {% assign tagArray = taglist | split: "," %}
+                          {% for grouptag in tagArray %}
+
+                            <li style="font-size: 12px;"><strong>{{ grouptag }}</strong></li><ul>
+
+                            {% for spec in openapi_spec_json %}
+                              {% for path in spec.paths %}
+                                {% assign method_json = path[1] %}
+                                {% for method in method_json %}
+
+                                  {% assign tagarray = method[1].tags %}
+                                  {% assign tag = tagarray[0] %}
+
+                                  {% assign verb = method[0] | upcase %}
+                                  {% assign summary = method[1].summary %}
+
+                                  {% if tag == grouptag %}
+                                    <li style="font-size: 12px;">{{ summary }} {{ verb }}</li>
+                                  {% endif %}
+
+                                {% endfor %}
+                              {% endfor %}
+                            {% endfor %}
+                            </ul>
+                          {% endfor %}
                         </ul>
                       </td>
                     </tr>
