--- a/index.html
+++ b/index.html
@@ -237,7 +237,15 @@ working - 13
                                   {% assign summary = method[1].summary %}
 
                                   {% if tag == grouptag %}
-                                    <li style="font-size: 12px;">{{ summary }} {{ verb }}</li>
+                                    <li style="font-size: 12px;">
+                                      {{ summary }}
+                                      {% if verb == 'GET' %}<span style="color:#009900">{% endif %}
+                                      {% if verb == 'POST' %}<span style="color:#0000ff">{% endif %}
+                                      {% if verb == 'GET' %}<span style="color:#ff0080">{% endif %}
+                                      {% if verb == 'DELETE' %}<span style="color:#ff9900">{% endif %}
+                                      <strong>{{ verb }}</strong>
+                                      </span>
+                                    </li>
                                   {% endif %}
 
                                 {% endfor %}
