--- a/index.html
+++ b/index.html
@@ -239,11 +239,11 @@ working - 13
                                   {% if tag == grouptag %}
                                     <li style="font-size: 12px;">
                                       {{ summary }}
-                                      {% if verb == 'GET' %}<span style="color:#009900">{% endif %}
-                                      {% if verb == 'POST' %}<span style="color:#0000ff">{% endif %}
-                                      {% if verb == 'GET' %}<span style="color:#ff0080">{% endif %}
-                                      {% if verb == 'DELETE' %}<span style="color:#ff9900">{% endif %}
-                                      (<strong>{{ verb }}</strong>)
+                                      {% if verb == 'GET' %}<span style="color:#009900; font-weight: bold;">{% endif %}
+                                      {% if verb == 'POST' %}<span style="color:#0000ff font-weight: bold;">{% endif %}
+                                      {% if verb == 'GET' %}<span style="color:#ff0080 font-weight: bold;">{% endif %}
+                                      {% if verb == 'DELETE' %}<span style="color:#ff9900 font-weight: bold;">{% endif %}
+                                      {{ verb }}
                                     </span>
                                     </li>
                                   {% endif %}
