--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@ working - 13
       </ul>
     </td>
   </tr>
+  <tr><td colspan="2"><hr /></td></tr>
   <tr>
     <td width="50%" align="center">[list others]</td>
     <td width="50%">
@@ -177,7 +178,7 @@ working - 13
 
                     <tr>
                       <td align="left">
-                        {{ api.name }}
+                        <p style="font-size: 18px;"><strong>{{ api.name }}</strong></p>
                       </td>
                       <td align="right">
                         {% if openapi_spec_url != null and openapi_spec_url != empty %}
