--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ working - 13
                       <td align="right">
                         {% if openapi_spec_url != null and openapi_spec_url != empty %}
                           <a href="{{ openapi_spec_url }}" target="_blank" title="OpenAPI Spec">
-                            <img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/openapi-spec/open-api-spec-icon.png" width="25" align="right" />
+                            OpenAPI Spec
                           </a>
                         {% endif %}
                         {% if api_blueprint_url != null and api_blueprint_url != empty %}
@@ -196,8 +196,8 @@ working - 13
                             <img style="padding: 15px;" src="https://s3.amazonaws.com/kinlane-productions/building-blocks/x-postman.png" width="25" align="right" />
                           </a>
                         {% endif %}
-                        <a href="#" onclick="showme('methods-for-{{ pathname }}'); return false;" target="_blank" title="View Endpoint List">
-                          <img style="padding-top: 4px; padding-right: 3px; padding-left: 3px;" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-endpoints.png" width="25" align="right" />
+                        <a href="http://{{ site.org }}.github.io/{{ site.repo }}/docs/" target="_blank" title="View Endpoint List">
+                          Documentation
                         </a>
                       </td>
                     </tr>
