--- a/index.html
+++ b/index.html
@@ -181,11 +181,6 @@ working - 13
                         <p style="font-size: 18px;"><strong>{{ api.name }}</strong></p>
                       </td>
                       <td align="right">
-                        {% if openapi_spec_url != null and openapi_spec_url != empty %}
-                          <a href="{{ openapi_spec_url }}" target="_blank" title="OpenAPI Spec">
-                            OpenAPI Spec
-                          </a>
-                        {% endif %}
                         {% if api_blueprint_url != null and api_blueprint_url != empty %}
                           <a href="{{ api_blueprint_url }}" target="_blank" title="API Blueprint">
                             <img style="padding: 15px;" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-api-blueprint-icon.png" width="25" align="right" />
@@ -196,9 +191,10 @@ working - 13
                             <img style="padding: 15px;" src="https://s3.amazonaws.com/kinlane-productions/building-blocks/x-postman.png" width="25" align="right" />
                           </a>
                         {% endif %}
-                        <a href="http://{{ site.org }}.github.io/{{ site.repo }}/docs/" target="_blank" title="View Endpoint List">
-                          Documentation
-                        </a>
+                        <a href="http://{{ site.org }}.github.io/{{ site.repo }}/docs/" target="_blank" title="View Endpoint List" style="font-size: 11px;">Documentation</a>
+                        {% if openapi_spec_url != null and openapi_spec_url != empty %}
+                          <a href="{{ openapi_spec_url }}" target="_blank" title="OpenAPI Spec" style="font-size: 11px;">OpenAPI Spec</a>
+                        {% endif %}
                       </td>
                     </tr>
                     <tr id="methods-for-{{ pathname }}">
