--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@ working - 13
                             <img style="padding: 15px;" src="https://s3.amazonaws.com/kinlane-productions/building-blocks/x-postman.png" width="25" align="right" />
                           </a>
                         {% endif %}
-                        <a href="http://{{ site.org }}.github.io/{{ site.repo }}/docs/" target="_blank" title="View Endpoint List" style="font-size: 11px;">Documentation</a>
+                        (<a href="http://{{ site.org }}.github.io/{{ site.repo }}/docs/" target="_blank" title="View Documentation" style="font-size: 11px;">Documentation</a>)
                         {% if openapi_spec_url != null and openapi_spec_url != empty %}
-                          <a href="{{ openapi_spec_url }}" target="_blank" title="OpenAPI Spec" style="font-size: 11px;">OpenAPI Spec</a>
+                          (<a href="{{ openapi_spec_url }}" target="_blank" title="View OpenAPI Spec" style="font-size: 11px;">OpenAPI Spec</a>)
                         {% endif %}
                       </td>
                     </tr>
