--- a/index.html
+++ b/index.html
@@ -180,19 +180,9 @@ working - 13
                         <p style="font-size: 18px;"><strong>{{ api.name }}</strong></p>
                       </td>
                       <td align="right">
-                        {% if api_blueprint_url != null and api_blueprint_url != empty %}
-                          <a href="{{ api_blueprint_url }}" target="_blank" title="API Blueprint">
-                            <img style="padding: 15px;" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-api-blueprint-icon.png" width="25" align="right" />
-                          </a>
-                        {% endif %}
-                        {% if postman_url != null and postman_url != empty %}
-                          <a href="{{ postman_url }}" target="_blank" title="API Blueprint">
-                            <img style="padding: 15px;" src="https://s3.amazonaws.com/kinlane-productions/building-blocks/x-postman.png" width="25" align="right" />
-                          </a>
-                        {% endif %}
-                        (<a href="http://{{ site.org }}.github.io/{{ site.repo }}/docs/" target="_blank" title="View Documentation" style="font-size: 11px;">Documentation</a>)
+                        (<a href="http://{{ site.org }}.github.io/{{ site.repo }}/docs/" target="_blank" title="View Documentation" style="font-size: 11px; padding: 3px;">Documentation</a>)
                         {% if openapi_spec_url != null and openapi_spec_url != empty %}
-                          (<a href="{{ openapi_spec_url }}" target="_blank" title="View OpenAPI Spec" style="font-size: 11px;">OpenAPI Spec</a>)
+                          (<a href="{{ openapi_spec_url }}" target="_blank" title="View OpenAPI Spec" style="font-size: 11px; padding: 3px;">OpenAPI Spec</a>)
                         {% endif %}
                       </td>
                     </tr>
