--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ working - 13
 {% assign website_url = '' %}
 
 {% for common in apijson.x-common %}
+
   {% if common.type == 'x-blog' %}
     {% assign blog_url = common.url %}
   {% endif %}
@@ -48,6 +49,37 @@ working - 13
   {% if common.type == 'x-twitter' %}
     {% assign twitter_url = common.url %}
   {% endif %}
+  {% if common.type == 'x-blog' %}
+    {% assign blog_url = common.url %}
+  {% endif %}
+  {% if common.type == 'x-blog-rss-feed' %}
+    {% assign blog_rss_url = common.url %}
+  {% endif %}
+  {% if common.type == 'x-change-log' %}
+    {% assign change_log_url = common.url %}
+  {% endif %}
+  {% if common.type == 'x-code-page' %}
+    {% assign code_page_url = common.url %}
+  {% endif %}
+  {% if common.type == 'x-documentation' %}
+    {% assign documentation_url = common.url %}
+  {% endif %}
+  {% if common.type == 'x-faq' %}
+    {% assign faq_url = common.url %}
+  {% endif %}
+  {% if common.type == 'x-getting-started' %}
+    {% assign getting_started_url = common.url %}
+  {% endif %}
+  {% if common.type == 'x-road-map' %}
+    {% assign road_map_url = common.url %}
+  {% endif %}
+  {% if common.type == 'x-status-dashboard' %}
+    {% assign status_dashboard_url = common.url %}
+  {% endif %}
+  {% if common.type == 'x-api-plan' %}
+    {% assign api_plan_url = common.url %}
+  {% endif %}
+
 {% endfor %}
 
 {% if apisjson.humanURL == null %}
@@ -120,7 +152,123 @@ working - 13
     </td>
   </tr>
   <tr>
-    <td width="50%" align="center">[list others]</td>
+    <td width="50%" align="center">
+      <table cellpadding="5" cellspacing="5" border="0" width="85%" id="jsonBrowserTable" style="margin-left: 15px;margin-top:15px;">
+				<tr id="onboarding" style="display: none;">
+					<td colspan="3" style="font-size: 22px; padding: 15px;"><strong>On-boarding</strong></td>
+				</tr>
+				<tr id="X-getting-started-row" style="display: none;">
+					<td width="25" style="height: 55px;"></td>
+					<td width="75" align="center" valign="middle"><a href="" id="X-getting-started-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-running.png" width="35" /></a></td>
+					<td><a href="" id="X-getting-started-url">Getting Started</a><div id="d-getting-started"></div></td>
+				</tr>
+				<tr id="X-authentication-row" style="display: none;">
+					<td width="25" style="height: 55px;"></td>
+					<td width="75" align="center" valign="middle"><a href="" id="X-authentication-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-authentication.png" width="35" /></a></td>
+					<td><a href="" id="X-authentication-url">Authentication</a><div id="d-authentication"></div></td>
+				</tr>
+				<tr id="X-faq-row" style="display: none;">
+					<td width="25" style="height: 55px;"></td>
+					<td width="75" align="center" valign="middle"><a href="" id="X-faq-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-question-mark.png" width="35" /></a></td>
+					<td><a href="" id="X-faq-url">FAQ</a><div id="d-faq"></div></td>
+				</tr>
+				<tr id="X-self-service-registration-row" style="display: none;">
+					<td width="25" style="height: 55px;"></td>
+					<td width="75" align="center" valign="middle"><a href="" id="X-self-service-registration-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-hand-wrench.jpg" width="35" /></a></td>
+					<td><a href="" id="X-self-service-registration-url">Registration</a><div id="d-self-service-registration"></div></td>
+				</tr>
+				<tr id="integration" style="display: none;">
+					<td colspan="3" style="font-size: 22px; padding: 15px;"><strong>Integration</strong></td>
+				</tr>
+				<tr id="X-documentation-row" style="display: none;">
+					<td width="25" style="height: 55px;"></td>
+					<td width="75" align="center" valign="middle"><a href="" id="X-documentation-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-documentation-interactive.png" width="35" /></a></td>
+					<td><a href="" id="X-documentation-url">Documentation</a><div id="d-documentation"></div></td>
+				</tr>
+				<tr id="X-code-row" style="display: none;">
+					<td width="25" style="height: 55px;"></td>
+					<td width="75" align="center" valign="middle"><a href="" id="X-code-img-url"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-code.png" width="35" /></a></td>
+					<td><a href="" id="X-code-url">Code</a><div id="d-code"></div></td>
+				</tr>
+				<tr id="X-pricing-row" style="display: none;">
+					<td width="25" style="height: 55px;"></td>
+					<td width="75" align="center" valign="middle"><a href="" id="X-pricing-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-dollar-sign.jpg" width="35" /></a></td>
+					<td><a href="" id="X-pricing-url">Pricing</a><div id="d-pricing"></div></td>
+				</tr>
+				<tr id="X-rate-limits-page-row" style="display: none;">
+					<td width="25" style="height: 55px;"></td>
+					<td width="75" align="center" valign="middle"><a href="" id="X-rate-limits-page-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-speed-limit.jpeg" width="35" /></a></td>
+					<td><a href="" id="X-rate-limits-page-url">Rate Limits</a><div id="d-rate-limits"></div></td>
+				</tr>
+				<tr id="communication" style="display: none;">
+					<td colspan="3" style="font-size: 22px; padding: 15px;"><strong>Communication</strong></td>
+				</tr>
+				<tr id="X-blog-row" style="display: none;">
+					<td width="25" style="height: 55px;"></td>
+					<td width="75" align="center" valign="middle"><a href="" id="X-blog-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-blog-icon.png" width="35" /></a></td>
+					<td><a href="" id="X-blog-url">Blog</a><div id="d-blog"></div></td>
+				</tr>
+				<tr id="X-blog-rss-feed-row" style="display: none;">
+					<td width="25" style="height: 55px;"></td>
+					<td width="75" align="center" valign="middle"><a href="" id="X-blog-rss-feed-img-url"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-rss-icon.png" width="35" /></a></td>
+					<td><a href="" id="X-blog-rss-feed-url">Blog RSS</a><div id="d-blog-rss-feed"></div></td>
+				</tr>
+				<tr id="X-twitter-row" style="display: none;">
+					<td width="25" style="height: 55px;"></td>
+					<td width="75" align="center" valign="middle"><a href="" id="X-twitter-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-twitter-icon.png" width="35" /></a></td>
+					<td><a href="" id="X-twitter-url">Twitter</a><div id="d-twitter"></div></td>
+				</tr>
+				<tr id="X-github-row" style="display: none;">
+					<td width="25" style="height: 55px;"></td>
+					<td width="75" align="center" valign="middle"><a href="" id="X-github-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-github.jpg" width="35" /></a></td>
+					<td><a href="" id="X-github-url">Github</a><div id="d-github"></div></td>
+				</tr>
+				<tr id="support" style="display: none;">
+					<td colspan="3" style="font-size: 22px; padding: 15px;"><strong>Support</strong></td>
+				</tr>
+				<tr id="X-support-row" style="display: none;">
+					<td width="25" style="height: 55px;"></td>
+					<td width="75" align="center" valign="middle"><a href="" id="X-support-img-url"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-support.png" width="35" /></a></td>
+					<td><a href="" id="X-support-url">Support</a><div id="d-support"></div></td>
+				</tr>
+				<tr id="updates" style="display: none;">
+					<td colspan="3" style="font-size: 22px; padding: 15px;"><strong>Updates</strong></td>
+				</tr>
+				<tr id="X-roadmap-row" style="display: none;">
+					<td width="25" style="height: 55px;"></td>
+					<td width="75" align="center" valign="middle"><a href="" id="X-roadmap-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-highway.png" width="35" /></a></td>
+					<td><a href="" id="X-roadmap-url">Roadmap</a><div id="d-roadmap"></div></td>
+				</tr>
+				<tr id="X-issues-row" style="display: none;">
+					<td width="25" style="height: 55px;"></td>
+					<td width="75" align="center" valign="middle"><a href="" id="X-issues-img-url"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-bug.png" width="35" /></a></td>
+					<td><a href="" id="X-issues-url">Issues</a><div id="d-issues"></div></td>
+				</tr>
+				<tr id="X-change-log-row" style="display: none;">
+					<td width="25" style="height: 55px;"></td>
+					<td width="75" align="center" valign="middle"><a href="" id="X-change-log-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-recycling.jpg" width="35" /></a></td>
+					<td><a href="" id="X-change-log-url">Change Log</a><div id="d-change-log"></div></td>
+				</tr>
+				<tr id="X-status-dashboard-row" style="display: none;">
+					<td width="25" style="height: 55px;"></td>
+					<td width="75" align="center" valign="middle"><a href="" id="X-status-dashboard-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-status-dashboard.png" width="35" /></a></td>
+					<td><a href="" id="X-status-dashboard-url">Status</a><div id="d-status-dashboard"></div></td>
+				</tr>
+				<tr id="legal" style="display: none;">
+					<td colspan="3" style="font-size: 22px; padding: 15px;"><strong>Legal</strong></td>
+				</tr>
+				<tr id="X-terms-of-service-row" style="display: none;">
+					<td width="25" style="height: 55px;"></td>
+					<td width="75" align="center" valign="middle"><a href="" id="X-terms-of-service-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-terms-conditions.png" width="35" /></a></td>
+					<td><a href="" id="X-terms-of-service-url">Terms of Service</a><div id="d-terms-of-service"></div></td>
+				</tr>
+				<tr id="X-privacy-policy-row" style="display: none;">
+					<td width="25" style="height: 55px;"></td>
+					<td width="75" align="center" valign="middle"><a href="" id="X-privacy-policy-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-privacy.png" width="35" /></a></td>
+					<td><a href="" id="X-privacy-policy-url">Privacy Policy</a><div id="d-privacy-policy"></div></td>
+				</tr>
+			</table>
+    </td>
     <td width="50%">
       <table width="100%" border="1">
       <tr>
@@ -209,7 +357,7 @@ working - 13
                           {% assign tagArray = taglist | split: "," %}
                           {% for grouptag in tagArray %}
 
-                            <li style="font-size: 12px;"><strong>{{ grouptag }}</strong></li><ul>
+                            <li style="font-size: 12px; margin-left: 25px;"><strong>{{ grouptag }}</strong></li><ul>
 
                             {% for spec in openapi_spec_json %}
                               {% for path in spec.paths %}
