--- a/index.html
+++ b/index.html
@@ -153,115 +153,115 @@ layout: page
   <tr>
     <td width="50%" align="center">
       <table cellpadding="5" cellspacing="5" border="0" width="85%" id="jsonBrowserTable" style="margin-left: 15px;margin-top:15px;">
-				<tr id="onboarding>
+				<tr id="onboarding">
 					<td colspan="3" style="font-size: 22px; padding: 15px;"><strong>On-boarding</strong></td>
 				</tr>
-				<tr id="X-getting-started-row>
+				<tr id="X-getting-started-row">
 					<td width="25" style="height: 55px;"></td>
 					<td width="75" align="center" valign="middle"><a href="" id="X-getting-started-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-running.png" width="35" /></a></td>
 					<td><a href="" id="X-getting-started-url">Getting Started</a><div id="d-getting-started"></div></td>
 				</tr>
-				<tr id="X-authentication-row>
+				<tr id="X-authentication-row">
 					<td width="25" style="height: 55px;"></td>
 					<td width="75" align="center" valign="middle"><a href="" id="X-authentication-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-authentication.png" width="35" /></a></td>
 					<td><a href="" id="X-authentication-url">Authentication</a><div id="d-authentication"></div></td>
 				</tr>
-				<tr id="X-faq-row>
+				<tr id="X-faq-row">
 					<td width="25" style="height: 55px;"></td>
 					<td width="75" align="center" valign="middle"><a href="" id="X-faq-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-question-mark.png" width="35" /></a></td>
 					<td><a href="" id="X-faq-url">FAQ</a><div id="d-faq"></div></td>
 				</tr>
-				<tr id="X-self-service-registration-row>
+				<tr id="X-self-service-registration-row">
 					<td width="25" style="height: 55px;"></td>
 					<td width="75" align="center" valign="middle"><a href="" id="X-self-service-registration-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-hand-wrench.jpg" width="35" /></a></td>
 					<td><a href="" id="X-self-service-registration-url">Registration</a><div id="d-self-service-registration"></div></td>
 				</tr>
-				<tr id="integration>
+				<tr id="integration">
 					<td colspan="3" style="font-size: 22px; padding: 15px;"><strong>Integration</strong></td>
 				</tr>
-				<tr id="X-documentation-row>
+				<tr id="X-documentation-row">
 					<td width="25" style="height: 55px;"></td>
 					<td width="75" align="center" valign="middle"><a href="" id="X-documentation-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-documentation-interactive.png" width="35" /></a></td>
 					<td><a href="" id="X-documentation-url">Documentation</a><div id="d-documentation"></div></td>
 				</tr>
-				<tr id="X-code-row>
+				<tr id="X-code-row">
 					<td width="25" style="height: 55px;"></td>
 					<td width="75" align="center" valign="middle"><a href="" id="X-code-img-url"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-code.png" width="35" /></a></td>
 					<td><a href="" id="X-code-url">Code</a><div id="d-code"></div></td>
 				</tr>
-				<tr id="X-pricing-row>
+				<tr id="X-pricing-row">
 					<td width="25" style="height: 55px;"></td>
 					<td width="75" align="center" valign="middle"><a href="" id="X-pricing-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-dollar-sign.jpg" width="35" /></a></td>
 					<td><a href="" id="X-pricing-url">Pricing</a><div id="d-pricing"></div></td>
 				</tr>
-				<tr id="X-rate-limits-page-row>
+				<tr id="X-rate-limits-page-row">
 					<td width="25" style="height: 55px;"></td>
 					<td width="75" align="center" valign="middle"><a href="" id="X-rate-limits-page-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-speed-limit.jpeg" width="35" /></a></td>
 					<td><a href="" id="X-rate-limits-page-url">Rate Limits</a><div id="d-rate-limits"></div></td>
 				</tr>
-				<tr id="communication>
+				<tr id="communication">
 					<td colspan="3" style="font-size: 22px; padding: 15px;"><strong>Communication</strong></td>
 				</tr>
-				<tr id="X-blog-row>
+				<tr id="X-blog-row">
 					<td width="25" style="height: 55px;"></td>
 					<td width="75" align="center" valign="middle"><a href="" id="X-blog-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-blog-icon.png" width="35" /></a></td>
 					<td><a href="" id="X-blog-url">Blog</a><div id="d-blog"></div></td>
 				</tr>
-				<tr id="X-blog-rss-feed-row>
+				<tr id="X-blog-rss-feed-row">
 					<td width="25" style="height: 55px;"></td>
 					<td width="75" align="center" valign="middle"><a href="" id="X-blog-rss-feed-img-url"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-rss-icon.png" width="35" /></a></td>
 					<td><a href="" id="X-blog-rss-feed-url">Blog RSS</a><div id="d-blog-rss-feed"></div></td>
 				</tr>
-				<tr id="X-twitter-row>
+				<tr id="X-twitter-row">
 					<td width="25" style="height: 55px;"></td>
 					<td width="75" align="center" valign="middle"><a href="" id="X-twitter-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-twitter-icon.png" width="35" /></a></td>
 					<td><a href="" id="X-twitter-url">Twitter</a><div id="d-twitter"></div></td>
 				</tr>
-				<tr id="X-github-row>
+				<tr id="X-github-row">
 					<td width="25" style="height: 55px;"></td>
 					<td width="75" align="center" valign="middle"><a href="" id="X-github-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-github.jpg" width="35" /></a></td>
 					<td><a href="" id="X-github-url">Github</a><div id="d-github"></div></td>
 				</tr>
-				<tr id="support>
+				<tr id="support">
 					<td colspan="3" style="font-size: 22px; padding: 15px;"><strong>Support</strong></td>
 				</tr>
-				<tr id="X-support-row>
+				<tr id="X-support-row">
 					<td width="25" style="height: 55px;"></td>
 					<td width="75" align="center" valign="middle"><a href="" id="X-support-img-url"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-support.png" width="35" /></a></td>
 					<td><a href="" id="X-support-url">Support</a><div id="d-support"></div></td>
 				</tr>
-				<tr id="updates>
+				<tr id="updates">
 					<td colspan="3" style="font-size: 22px; padding: 15px;"><strong>Updates</strong></td>
 				</tr>
-				<tr id="X-roadmap-row>
+				<tr id="X-roadmap-row">
 					<td width="25" style="height: 55px;"></td>
 					<td width="75" align="center" valign="middle"><a href="" id="X-roadmap-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-highway.png" width="35" /></a></td>
 					<td><a href="" id="X-roadmap-url">Roadmap</a><div id="d-roadmap"></div></td>
 				</tr>
-				<tr id="X-issues-row>
+				<tr id="X-issues-row">
 					<td width="25" style="height: 55px;"></td>
 					<td width="75" align="center" valign="middle"><a href="" id="X-issues-img-url"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-bug.png" width="35" /></a></td>
 					<td><a href="" id="X-issues-url">Issues</a><div id="d-issues"></div></td>
 				</tr>
-				<tr id="X-change-log-row>
+				<tr id="X-change-log-row">
 					<td width="25" style="height: 55px;"></td>
 					<td width="75" align="center" valign="middle"><a href="" id="X-change-log-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-recycling.jpg" width="35" /></a></td>
 					<td><a href="" id="X-change-log-url">Change Log</a><div id="d-change-log"></div></td>
 				</tr>
-				<tr id="X-status-dashboard-row>
+				<tr id="X-status-dashboard-row">
 					<td width="25" style="height: 55px;"></td>
 					<td width="75" align="center" valign="middle"><a href="" id="X-status-dashboard-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-status-dashboard.png" width="35" /></a></td>
 					<td><a href="" id="X-status-dashboard-url">Status</a><div id="d-status-dashboard"></div></td>
 				</tr>
-				<tr id="legal>
+				<tr id="legal">
 					<td colspan="3" style="font-size: 22px; padding: 15px;"><strong>Legal</strong></td>
 				</tr>
-				<tr id="X-terms-of-service-row>
+				<tr id="X-terms-of-service-row">
 					<td width="25" style="height: 55px;"></td>
 					<td width="75" align="center" valign="middle"><a href="" id="X-terms-of-service-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-terms-conditions.png" width="35" /></a></td>
 					<td><a href="" id="X-terms-of-service-url">Terms of Service</a><div id="d-terms-of-service"></div></td>
 				</tr>
-				<tr id="X-privacy-policy-row>
+				<tr id="X-privacy-policy-row">
 					<td width="25" style="height: 55px;"></td>
 					<td width="75" align="center" valign="middle"><a href="" id="X-privacy-policy-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-privacy.png" width="35" /></a></td>
 					<td><a href="" id="X-privacy-policy-url">Privacy Policy</a><div id="d-privacy-policy"></div></td>
