--- a/index.html
+++ b/index.html
@@ -393,6 +393,7 @@ layout: page
                 {% endfor %}
             </td>
           </tr>
-        </td>
-      </tr>
-  </table>
+        <table>
+      </td>
+    </tr>
+</table>
