--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ layout: page
     </td>
     <td width="50%">
       <table width="100%" border="1">
-      <tr>
+        <tr>
         <td align="center" style="margin-left: 90px; margin-right: 90px;">
 
             {% assign api_action_url = '' %}
@@ -390,3 +390,9 @@ layout: page
             </td>
           </tr>
         <table>
+      </td>
+    </tr>
+  <table>
+  </td>
+</tr>
+<table>    
