--- a/support/index.html
+++ b/support/index.html
@@ -8,11 +8,11 @@ layout: page
 <h1>{{ apisupport.title }}</h1>
 <p><img src="{{ apisupport.image }}" align="right" width="100" style="padding: 15px;" /></p>
 <p>{{ apisupport.header }}</p>
-<table cellpadding="10" cellspacing="10" width="90%" align="center">
+<table cellpadding="10" cellspacing="10" width="100%">
 	{% for resource in apisupport.resources %}
 	<tr>
-		<td align="center" valign="top" width="33%">
-			<a href="{{ resource.url }}"><img src="{{ resource.image }}" width="80" align="center"></a>
+		<td align="center" valign="top">
+			<a href="{{ resource.url }}"><img src="{{ resource.image }}" width="75" align="center"></a>
 			<a href="{{ resource.url }}">{{ resource.title }}</a>
 		</td>
 	</tr>
