--- a/change-log/index.html
+++ b/change-log/index.html
@@ -2,7 +2,7 @@
 layout: page
 ---
 
-{% assign index = site.data.api-commons.api-changelog %}
+{% assign index = site.data.api-commons.api-change-log %}
 {% assign apichangelog = index[0] %}
 
 <h1>{{ apichangelog.title }}</h1>
