--- a/issues/index.html
+++ b/issues/index.html
@@ -1,23 +1,22 @@
 ---
 layout: page
-title: Issues
 ---
 
-<p><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-bug.png" align="right" width="150" style="padding: 15px;" /></p>
+{% assign index = site.data.api-commons.api-issues %}
+{% assign apiissues = index[0] %}
 
-<p>This is the current issues around the APIs, which just lists <a href="https://github.com/api-commons/api-portal/issues">issues from the Github repository</a> for this project. If you wish to contribute, <a href="https://github.com/api-commons/api-portal/issues/new">submit an issue or comment via this Github repository</a>.</p>
-
-<script type="text/javascript">
-
-GITHUB_ISSUES_USER = "api-commons";
-GITHUB_ISSUES_REPO = "api-portal";
-
-GITHUB_ISSUES_LABELS = "known";
-</script>
-
-<div id="github-issues-widget"></div>
-
-<script type="text/javascript" src="https://s3.amazonaws.com/kinlane-productions/js/github-issues.js"></script>
-<script type="text/javascript">
-    GithubIssuesWidget.go();
-</script>
+<h1>{{ apiissues.title }}</h1>
+<p><img src="{{ apiissues.image }}" align="right" width="75" style="padding: 5px;" /></p>
+<p>{{ apiissues.header }}</p>
+<center>
+<table cellpadding="10" cellspacing="10" width="90%">
+	{% for current in apiissues.current %}
+    <tr>
+  		<td align="left" valign="top">
+  			({{ current.date | date: "%D" }}) <strong>{{ current.title }}</strong> - {{ current.description }}
+  		</td>
+    </tr>
+	{% endfor %}
+</table>
+</center>
+<p>{{ apiissues.footer }}</p>
