--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ layout: page
         {% if plan_url != '' %}
 				<tr id="x-plan-row">
 					<td width="25" style="height: 55px;"></td>
-					<td width="75" align="center" valign="middle"><a href="{{ plan_url }}" id="x-plan-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/x-plan.png" width="35" /></a></td>
+					<td width="75" align="center" valign="middle"><a href="{{ plan_url }}" id="x-plan-img-url"><img src="https://s3.amazonaws.com/kinlane-productions/building-blocks/x-plan.png" width="35" /></a></td>
 					<td><a href="{{ plan_url }}" id="x-plan-url">Plans</a><div id="d-plan"></div></td>
 				</tr>
         {% endif %}
