--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ layout: page
   {% if common.type == 'x-login' %}
     {% assign login_url = common.url %}
   {% endif %}
-  {% if common.type == 'x-signup' %}
+  {% if common.type == 'x-selfservice-registration' %}
     {% assign signup_url = common.url %}
   {% endif %}
 
