--- a/getting-started/index.html
+++ b/getting-started/index.html
@@ -2,7 +2,7 @@
 layout: page
 ---
 
-{% assign index = site.data.api-commons.getting-started %}
+{% assign index = site.data.api-commons.api-getting-started %}
 {% assign apigettingstarted = index[0] %}
 
 <h1>{{ apigettingstarted.title }}</h1>
