--- a/index.html
+++ b/index.html
@@ -404,10 +404,7 @@ layout: page
                 {% endfor %}
             </td>
           </tr>
-        <table>
+        </table>
       </td>
     </tr>
-  <table>
-  </td>
-</tr>
-<table>
+  </table>
