--- a/documentation/index.html
+++ b/documentation/index.html
@@ -81,13 +81,8 @@ layout: page
 {% endfor %}
 
   <tr>
-    <td style="padding-bottom: 10px;">
-      {% if apijson.image != null %}
-        <a href="{{ site.url }}/apis.json">
-          <img src="{{ apijson.image }}" align="left" style="padding: 5px;" width="125" />
-        </a>
-      {% endif %}
-      <a href="{{ site.url }}" style="font-size: 22px;"><strong>{{ apijson.name }}</strong></a><br />
+    <td>
+      <a href="{{ site.url }}" style="font-size: 22px;"><strong>Documentation for {{ apijson.name }}</strong></a><br />
       {{ apijson.description }}
     </td>
   </tr>
